<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity"
    android:background="@drawable/fragment_bk">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fitzgerald_s_gym"
        android:textSize="48sp"
        android:textColor="@color/textColorDarker"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/merchandiseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_merchandise"
        style="@style/textStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMerchandise"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/merchandiseTextView"
        app:layout_constraintBottom_toTopOf="@id/inventoryTextView"
         />
    <TextView
        android:id="@+id/inventoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory"
        style="@style/textStyle"
        app:layout_constraintVertical_bias=".6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewInventory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inventoryTextView"/>

    <FrameLayout
        android:id="@+id/fragment_framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>